objects/configuration_development_only__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship with the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>configuration_development_only</relationshipLabel>
        <relationshipName>configuration_development_only</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship with the Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>configuration_development_only</relationshipLabel>
        <relationshipName>configuration_development_only</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship with the Partner Quote</description>
        <label>Partner Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>configuration_development_only</relationshipLabel>
        <relationshipName>configuration_development_only</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_1__c</fullName>
        <description>Generic field currently used to display links in SAC Project</description>
        <label>Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_2__c</fullName>
        <description>Generic field currently used to display links in SAC Project</description>
        <label>Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_3__c</fullName>
        <label>Text 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added for Quote March Q3 release</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>configuration_development_only</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>DO NOT Add to any Pagelayouts. Allow Edit and Create for all Profiles, even read-only. Used for VF pages. Does not hold any data.</description>
    <label>configuration_development_only</label>
    <nameField>
        <label>configuration_development_only Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>configuration_development_only</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>